[package]
name = "bouncinamation"
description = "Bouncing DvD logo animation"
version = "0.1.0"
authors = ["pythops <contact@pythops.com>"]
license = "AGPL-3.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/pythops/bouncinamation"
repository = "https://github.com/pythops/bouncinamation"

[dependencies]
crossterm = "0.26.1"
tui = { package = "ratatui", version = "0.20.1" }
